Updated to Spring boot2 and Hoxton version for Spring Cloud

--- a/licensing-service/src/main/resources/application.yml
+++ b/licensing-service/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   profiles:
     active:
       default
+  main:
+    allow-bean-definition-overriding: true
 
 #security:
 #  oauth2:
@@ -27,3 +29,22 @@ logging:
     com.thoughtmechanix: DEBUG
 
 
+management:
+  endpoint:
+    health:      
+      enabled: true
+    env:
+      enabled: true
+    refresh:
+      enabled: true
+    beans:
+      enabled: true
+  endpoints:
+    web:      
+      exposure:        
+        include:        
+        - info
+        - env
+        - refresh
+        - beans
+        - loggers
