--- a/authentication-service/src/main/resources/application.yml
+++ b/authentication-service/src/main/resources/application.yml
@@ -25,4 +25,5 @@ eureka:
         defaultZone: http://localhost:8761/eureka/
 
 server:
-  contextPath:   /auth
+  servlet:
+    contextPath:   /auth
