--- a/zuulsvr/pom.xml
+++ b/zuulsvr/pom.xml
@@ -13,14 +13,14 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.4.RELEASE</version>
+    <version>2.2.1.RELEASE</version>
   </parent>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Camden.SR5</version>
+        <version>Hoxton.SR5</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -29,12 +29,16 @@
 
   <dependencies>
     <dependency>
+   	  <groupId>org.springframework.boot</groupId>
+   	  <artifactId>spring-boot-starter-actuator</artifactId>
+	</dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-zuul</artifactId>
+      <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-eureka</artifactId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
