--- a/zuulsvr/src/main/resources/application.yml
+++ b/zuulsvr/src/main/resources/application.yml
@@ -28,6 +28,28 @@ eureka:
         defaultZone: http://localhost:8761/eureka/
 
 
+management:
+  endpoint:
+    health:      
+      enabled: true
+    env:
+      enabled: true
+    refresh:
+      enabled: true
+    beans:
+      enabled: true
+    routes:
+      enabled: true
+  endpoints:
+    web:      
+      exposure:        
+        include:        
+        - info
+        - env
+        - refresh
+        - beans
+        - loggers
+        - routes
 
 #
 #
